--- a/app/design/frontend/Satoshi/Hyva/Magento_Bundle/templates/catalog/product/view/type/bundle/option/checkbox.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Bundle/templates/catalog/product/view/type/bundle/option/checkbox.phtml
@@ -2,9 +2,10 @@
 
 declare(strict_types=1);
 
+use Hyva\Theme\Model\ViewModelRegistry;
+use Hyva\Theme\ViewModel\SvgIcons;
 use Magento\Bundle\Block\Catalog\Product\View\Type\Bundle\Option\Checkbox;
 use Magento\Framework\Escaper;
-use Hyva\Theme\ViewModel\SvgIcons;
 
 /** @var Checkbox $block */
 /** @var Escaper $escaper */
@@ -17,18 +18,21 @@ $selections = $option->getSelections();
 $default = $option->getDefaultSelection();
 
 $optionId = $option->getId();
+$isPopup = $block->getData('is_popup');
 ?>
 <?php if ($block->showSingle()): ?>
-    <?= /* @noEscape */ $block->getSelectionQtyTitlePrice($selections[0]) ?>
-    <?= /* @noEscape */ $block->getTierPriceRenderer()->renderTierPrice($selections[0]) ?>
+    <?= /* @noEscape */
+    $block->getSelectionQtyTitlePrice($selections[0]) ?>
+    <?= /* @noEscape */
+    $block->getTierPriceRenderer()->renderTierPrice($selections[0]) ?>
     <input type="hidden"
            class="bundle-option-<?= (int)$optionId ?>  product bundle option"
            name="bundle_option[<?= (int)$optionId ?>]"
-           form="product_addtocart_form"
+           form="product_addtocart_form_<?= $isPopup ? 'mobile' : 'desktop' ?>"
            value="<?= (int)$selections[0]->getSelectionId() ?>"
            id="bundle-option-<?= (int)$optionId ?>-<?= (int)$selections[0]->getSelectionId() ?>"
            checked
-           data-option-id="<?= (int)$optionId ?>"
+           data-option-id="<?= (int)$optionId ?>-<?= $isPopup ? 'mobile' : 'desktop' ?>"
            data-selection-id="<?= (int)$selections[0]->getSelectionId() ?>"
     />
 <?php else: ?>
@@ -36,31 +40,36 @@ $optionId = $option->getId();
         <?php $selectionId = $selection->getSelectionId(); ?>
         <?php $optionSelectionId = $optionId . '-' . $selectionId ?>
 
-        <label class="flex items-center gap-3 mb-3" for="bundle-option-<?= $escaper->escapeHtmlAttr($optionSelectionId) ?>">
+        <label class="flex items-center gap-3 mb-3"
+               for="bundle-option-<?= $escaper->escapeHtmlAttr($optionSelectionId) ?>-<?= $isPopup ? 'mobile' : 'desktop' ?>">
             <input
-                  class="checkbox__input"
-                  id="bundle-option-<?= $escaper->escapeHtmlAttr($optionSelectionId) ?>"
-                   name="bundle_option[<?= (int)$optionId ?>][<?= (int)$selectionId ?>]"
-                   form="product_addtocart_form"
-                   type="checkbox"
-                   <?php if ($block->isSelected($selection)) { echo ' checked'; } ?>
-                   <?php if (!$selection->isSaleable()): ?>
-                       disabled
-                   <?php endif; ?>
-                   value="<?= (int)$selectionId ?>"
-                   data-option-id="<?= $escaper->escapeHtmlAttr($optionSelectionId) ?>"
-                   x-on:change="calculateTotalPrice()"
+                class="checkbox__input"
+                id="bundle-option-<?= $escaper->escapeHtmlAttr($optionSelectionId) ?>-<?= $isPopup ? 'mobile' : 'desktop' ?>"
+                name="bundle_option[<?= (int)$optionId ?>][<?= (int)$selectionId ?>]"
+                form="product_addtocart_form_<?= $isPopup ? 'mobile' : 'desktop' ?>"
+                type="checkbox"
+                <?php if ($block->isSelected($selection)) {
+                    echo ' checked';
+                } ?>
+                <?php if (!$selection->isSaleable()): ?>
+                    disabled
+                <?php endif; ?>
+                value="<?= (int)$selectionId ?>"
+                data-option-id="<?= $escaper->escapeHtmlAttr($optionSelectionId) ?>-<?= $isPopup ? 'mobile' : 'desktop' ?>"
+                x-on:change="calculateTotalPrice()"
             />
 
             <span class="checkbox__control h-5 w-5" aria-hidden="true">
                 <?= $hyvaicons->renderHtml('checkmark') ?>
             </span>
             <span class="checkbox__label ml-0 ">
-              <?= /* @noEscape */ $block->getSelectionQtyTitlePrice($selection) ?>
+              <?= /* @noEscape */
+              $block->getSelectionQtyTitlePrice($selection) ?>
             </span>
         </label>
 
-        <?= /* @noEscape */ $block->getTierPriceRenderer()->renderTierPrice($selection) ?>
+        <?= /* @noEscape */
+        $block->getTierPriceRenderer()->renderTierPrice($selection) ?>
     <?php endforeach; ?>
     <div id="bundle-option-<?= (int)$optionId ?>-container"></div>
 <?php endif; ?>
