--- a/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_product_view.xml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Catalog/layout/catalog_product_view.xml
@@ -11,7 +11,7 @@
 
         <referenceBlock name="product.info">
             <!-- Product actions -->
-            <block class="Satoshi\Theme\Block\ProductActions" name="product.actions"
+            <block class="Magento\Catalog\Block\Product\View" name="product.actions"
                    template="Magento_Catalog::product/view/product-actions.phtml"/>
         </referenceBlock>
         <move element="product.info.quantity" destination="product.actions" />
