INTERNAL-435: Rework cart & overcome cached responses

--- a/app/design/frontend/Satoshi/Hyva/Magento_GroupedProduct/templates/product/view/type/grouped.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_GroupedProduct/templates/product/view/type/grouped.phtml
@@ -86,6 +86,7 @@ $hasAssociatedProducts = count($associatedProducts) > 0;
                                    min="0"
                                    name="super_group[<?= $escaper->escapeHtmlAttr($item->getId()) ?>]"
                                    id="super_group[<?= $escaper->escapeHtmlAttr($item->getId()) ?>]"
+                                   value="0"
                                    :value="value"
                                    title="<?= $escaper->escapeHtmlAttr(__('Qty')) ?>"
                                    class="animate-on-transition input__field flex-shrink-0 basis-14 text-center bg-transparent h-9 px-3 me-2"
