--- a/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
+++ b/app/design/frontend/Satoshi/Hyva/Magento_Theme/templates/html/header/cart/minicart-items.phtml
@@ -60,7 +60,7 @@ $mixBackground = true;
                         <div
                             class="absolute bottom-5 left-1/2 hidden max-w-min -translate-x-1/2 items-center gap-3 <?= $isCartPage ? 'md:flex' : '' ?>"
                         >
-                            <?= $template->render('Magento_Theme::html/header/cart/minicart-quantity-controls.phtml') ?>
+                            <?= $template->setData('for_cart_page', true)->render('Magento_Theme::html/header/cart/minicart-quantity-controls.phtml') ?>
                         </div>
                     </div>
                     <div
@@ -86,7 +86,7 @@ $mixBackground = true;
                         </div>
                         <div class="flex flex-wrap items-center justify-between">
                             <div class="flex max-w-min items-center gap-3 <?= $isCartPage ? 'md:hidden' : '' ?>">
-                                <?= $template->render('Magento_Theme::html/header/cart/minicart-quantity-controls.phtml') ?>
+                                <?= $template->setData('for_cart_page', false)->render('Magento_Theme::html/header/cart/minicart-quantity-controls.phtml') ?>
                             </div>
                             <div
                                 class="flex flex-col items-center justify-between text-md <?= $isCartPage ? 'md:items-start' : '' ?>">
